--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <!-- For netlify form submission -->
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="text" name="company" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
+
   <div id="root"></div>
 
 </body>
