--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,17 @@
 
   <!-- For netlify form submission -->
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name">
+    <input type="email" name="email">
+    <textarea name="message"></textarea>
+  </form>
+
+  <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="text" name="name" />
     <input type="text" name="company" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
-  </form>
+  </form> -->
 
   <div id="root"></div>
 
