Updated pages for mobile responsive

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
 
   <div id="root"></div>
 
+  <script>
+    $('.nav-link').click(function () {
+      $('.navbar-toggler').click();
+    });
+  </script>
+
 </body>
 
 </html>
