Removed jQuery script

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,9 @@
   <div id="root"></div>
 
   <script>
-    $('.nav-link').click(function () {
-      $('.navbar-toggler').click();
-    });
+    // $('.nav-link').click(function () {
+    //   $('.navbar-toggler').click();
+    // });
   </script>
 
 </body>
